[package]
name = "valence_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
futures = "0.3.28"
mongodb = "2.6.1"
redis = { version = "0.23.0", features=["aio", "connection-manager", "tokio-comp", "async-std-comp"]}
warp = "0.3.5"
ring = "0.16.20"
serde = { version = "1.0.173", features=["derive"] }
serde_json = "1.0.103"
hex = "0.4.3"
cuckoofilter = "0.5.0"
tracing = "0.1.37"
