[package]
name = "valence_core"
version = "0.1.5"
edition = "2021"
license = "MIT"
keywords = ["blockchain", "L2", "peer-to-peer", "P2P"]
readme = "README.md"
description = "Core module used across plug-ins for A-Block Valence nodes"
homepage = "https://a-block.io"
documentation = "https://a-block.io"
repository = "https://github.com/ABlockOfficial/valence_core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
futures = "0.3.28"
mongodb = "2.6.1"
redis = { version = "0.23.0", features=["aio", "connection-manager", "tokio-comp", "async-std-comp"]}
warp = "0.3.5"
ring = "0.16.20"
serde = { version = "1.0.173", features=["derive"] }
serde_json = "1.0.103"
hex = "0.4.3"
cuckoofilter = "0.5.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-futures = "0.2.3"
sha3 = "0.10.8"
